public/css/style.css
#loginSignUpForms{
  border: 2px solid #2a2850;
  border-radius: 8px;
  padding: 15px;
}
#loginAlert, #signUpAlert {
    display: none;
    transition: ease-in 0.3s;
}
* {
    margin: 0;
    padding: 0;
    /* border: solid red 1px; */
}
header {
    padding-left: 25px;
    padding-bottom: 10px;
    background: #2a2850;
    color: white;
    border-bottom: 10px solid #eea09b;
}
body {
    background-color: #fbf3db;
}
form {
    background-color: white;
}
.form-control {
    border: 1px solid #2a2850;
}
h2 {
    color: #2a2850;
}
p {
    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";;
    padding: 15px;
    line-height: 2.5;
    text-align: center;
    color: #2a2850;
}
.homepageLink {
    color: #eea09b;
    transition: 0.2s;
}
.homepageLink:hover {
    color: #eea09b;
    background: #2a2850;
}
h1 {
    font-family: 'Titillium Web', sans-serif;
    padding-left: 40px;

}
.homebutton {
    color: white!important;
    text-decoration: none!important;
}
h5 {
    font-family: 'Zilla Slab', serif;
}
.quote {
    font-weight: bolder;
}
.quote::before {
    content: '" ';
    color: #eea09b;
}
.quote::after {
    content: ' "';
    color: #eea09b;
}
.btn-primary {
    background: #2a2850;
    border: #2a2850
}
.btn-primary:hover {
    background: #eea09b;
}
.iframe-container {
    position: relative;
    width: 100%;
    padding-bottom: 56.25%; 
    height: 0;
}
.iframe-container iframe {
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
}









/* styling for login button */
#loginBtn{
  display: inline-block;
  margin-right: 5px;
}

/* styling for signup button */
#signupBtn{
  display: inline-block;
  margin-right: 5px;
}

/* styling for login form  */
#loginHidden{
  display:contents;
  transition: ease-in-out 0.3s;
}

/* styling for signup form */
#signupHidden{
  display:none;
  transition: ease-in-out 0.3s;
}

#signup-promptBtn{
  cursor: pointer;
  text-decoration-line: underline;
  color: blue;
}

#login-promptBtn{
  cursor: pointer;
  text-decoration-line: underline;
  color: blue;
}

















































































/*source:https://www.w3schools.com/howto/howto_js_rangeslider.asp*/
.slidecontainer {
  width: 100%; /* Width of the outside container */
}

/* The slider itself */
.slider {
  -webkit-appearance: none;  /* Override default CSS styles */
  appearance: none;
  width: 100%; /* Full-width */
  height: 25px; /* Specified height */
  background: #d3d3d3; /* Grey background */
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
  transition: opacity .2s;
}

/* Mouse-over effects */
.slider:hover {
  opacity: 1; /* Fully shown on mouse-over */
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.slider::-webkit-slider-thumb {
  -webkit-appearance: none; /* Override default look */
  appearance: none;
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #04AA6D; /* Green background */
  cursor: pointer; /* Cursor on hover */
}

.slider::-moz-range-thumb {
  width: 25px; /* Set a specific slider handle width */
  height: 25px; /* Slider handle height */
  background: #04AA6D; /* Green background */
  cursor: pointer; /* Cursor on hover */
}

#demo {
  text-align:center;
}

.dashboard-heading {
  text-align:center;
  font-size: 40px;
  margin-bottom: 40px;
}

.container {
  margin-top:40px;
  margin-bottom:40px;
}

.btns {
  background-color:  white;
  margin-top: 10px;
}

.centrebtns {
  text-align: center;
}

.hide {
  display: none;
}

.show {
  display: contents;
}

#sleepFacts{
  position: relative;
  top:45px;
}


/* styling for signup button */
#signupBtn{
  display: inline-block;
  margin-right: 5px;
}

/* styling for login form  */
#loginHidden{
  display:contents;
  transition: ease-in-out 0.3s;
}

/* styling for signup form */
#signupHidden{
  display:none;
  transition: ease-in-out 0.3s;
}

/* styling for signup prompt anchor */
#signup-promptBtn{
    cursor: pointer;
    text-decoration-line: underline;
    color: blue;
}

/* styling for signup prompt anchor */
#signup-promptBtn2{
  cursor: pointer;
  text-decoration-line: underline;
  color: blue;
}

/* styling for login prompt anchor */
#login-promptBtn{
  cursor: pointer;
  text-decoration-line: underline;
  color: blue;
}

